--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,4 +1,8 @@
 <section class="quizz-container">
-  <app-logo-title></app-logo-title>
+  <app-logo-title
+  title="{{title}}"
+  titleDescription="{{titleDescription}}"
+  ></app-logo-title>
   <app-questions></app-questions>
+  <app-result></app-result>
 </section>
