--- a/src/app/components/quizz/result/result.component.html
+++ b/src/app/components/quizz/result/result.component.html
@@ -1,6 +1,8 @@
 <div class="result-container">
-  <p class="result-description">descrição</p>
+  <h2>O seu resultado é:</h2>
+  <p class="result-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, praesentium eveniet dolorum rerum nulla minima, itaque quo enim, quos vitae nisi inventore iusto animi quibusdam molestiae architecto magni. Possimus, omnis?</p>
   <div class="result-profession-container">
-    <span class="result-profession"><a href="#" target="_blank" rel="noopener noreferrer">TESTE</a></span>
+    <span class="result-profession"><a href="#" target="_blank" rel="noopener noreferrer">DESENVOLVEDOR BACKEND</a></span>
+    <span class="result-profession"><a href="#" target="_blank" rel="noopener noreferrer">DESENVOLVEDOR BACKEND</a></span>
   </div>
 </div>
