--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
   --background-color: #1f1147;
   --text-color: #ffffff;
   --border-color: #4224d9;
+  --primary-color: #18ab29;
+  --secondary-color: #210239;
 }
 
 *,
