--- a/src/app/components/quizz/logo-title/logo-title.component.html
+++ b/src/app/components/quizz/logo-title/logo-title.component.html
@@ -1,4 +1,5 @@
 <div class="logo-title-container">
   <img src="assets/images/logo.png" alt="logo" class="logo">
-  <h1 class="title">QUE TIPO DE PROGRAMADOR VOCÊ É ?</h1>
+  <h1 class="title">{{title}}</h1>
+  <p>{{titleDescription}}</p>
 </div>
