--- a/src/app/components/quizz/result/result.component.html
+++ b/src/app/components/quizz/result/result.component.html
@@ -5,4 +5,5 @@
     <span class="result-profession"><a href="#" target="_blank" rel="noopener noreferrer">DESENVOLVEDOR BACKEND</a></span>
     <span class="result-profession"><a href="#" target="_blank" rel="noopener noreferrer">DESENVOLVEDOR BACKEND</a></span>
   </div>
+  <small></small>
 </div>
