--- a/src/app/components/quizz/questions/questions.component.html
+++ b/src/app/components/quizz/questions/questions.component.html
@@ -1,10 +1,8 @@
 <div class="questions-container">
   <div class="questions-title">
-    <h3>Qualquer questão</h3>
+    <h3>{{question}}</h3>
   </div>
   <div class="options">
-    <button class="btn-option">Nome da opção</button>
-    <button class="btn-option">Nome da opção</button>
-    <button class="btn-option">Nome da opção</button>
+    <button (click)="teste(answer.alias)" class="btn-option" *ngFor="let answer of answers">{{answer.name}}</button>
   </div>
 </div>
