--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -15,4 +15,7 @@
   [observation]="observation"
   *ngIf="finished"
   ></app-result>
+  <app-progress-bar
+  [progress]="progressBar"
+  ></app-progress-bar>
 </section>
