--- a/src/app/components/quizz/result/result.component.html
+++ b/src/app/components/quizz/result/result.component.html
@@ -8,4 +8,7 @@
   </div>
   <button (click)="refresh()" >Tentar Novamente</button>
   <small>{{observation}}</small>
+  <div class="share">
+    <button (click)="shareOnSocialMedia()" >Twitter</button>
+  </div>
 </div>
