--- a/src/app/components/quizz/logo-title/logo-title.component.html
+++ b/src/app/components/quizz/logo-title/logo-title.component.html
@@ -1,5 +1,5 @@
 <div class="logo-title-container">
-  <img src="assets/images/logo.png" alt="logo" class="logo">
+  <img src="assets/images/gtsdevquizz.png" alt="logo" class="logo">
   <h1 class="title">{{title}}</h1>
   <p>{{titleDescription}}</p>
 </div>
