--- a/src/app/components/quizz/progress-bar/progress-bar.component.scss
+++ b/src/app/components/quizz/progress-bar/progress-bar.component.scss
@@ -1,14 +1,15 @@
 .progress-bar-container{
   display: flex;
-  width: 700px;
+  max-width: 768px;
+  width: 70vw;
   .progress-bar{
-    height: 50px;
+    height: 30px;
     width: 100%;
 
     .progress-bar-fill{
       height: 100%;
-      background-color: #00b894;
-      transition: width 0.5s ease-in-out both;
+      background-color: var(--bar);
+      transition: width 0.5s var(--cubic);
     }
   }
 }
