--- a/src/app/components/quizz/questions/questions.component.html
+++ b/src/app/components/quizz/questions/questions.component.html
@@ -3,8 +3,8 @@
     <h3>{{question}}</h3>
   </div>
   <div class="options">
-    <button
-    (click)="addAnswer(option.alias)"
-    class="btn-option" *ngFor="let option of options">{{option.name}}</button>
+    <button [style.--i]="(i+1)+'s'" (click)="addAnswer(option.alias)" class="btn-option"
+    id="btn"
+      *ngFor="let option of options; let i = index">{{option.name}}</button>
   </div>
 </div>
