--- a/src/app/components/quizz/result/result.component.scss
+++ b/src/app/components/quizz/result/result.component.scss
@@ -60,4 +60,47 @@
       text-align: center;
     }
   }
+
+  .social-media-container {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--bar);
+    border-radius: 1rem;
+    padding: 1rem;
+
+    .social-media-icons {
+      margin-top: 1rem;
+      display: flex;
+      gap: 1rem;
+
+      div {
+        cursor: pointer;
+        display: flex;
+        img {
+          width: 30px;
+        }
+        &:hover {
+          transform: scale(1.2);
+          transition: all 0.2s var(--cubic);
+        }
+      }
+    }
+  }
+}
+
+.btn-refresh {
+  padding: 1rem;
+  text-transform: uppercase;
+  font-family: "Times New Roman", Times, serif;
+  background-color: transparent;
+  color: var(--text-color);
+  border: 1px solid var(--text-color);
+  cursor: pointer;
+
+  &:hover {
+    background-color: var(--text-color);
+    color: var(--background-color);
+  }
 }
